# MIO

./: .gitignore  README.md  app1.py  lab1.py
AE/: AE1.ipynb  AE2.ipynb  AE2b.ipynb  AE2bP2.ipynb  AEmeetsNN.ipynb  Results.ipynb  Results2.ipynb  ae1_exp.py  requirements.txt
KOH/: KOH1.ipynb  KOH1.py  KOH2.py  KOH_MNIST.py  KOH_NOT_MNIST.py  koh.py  mnist.json  not_mnist.json  training.py  vis copy.ipynb  vis.ipynb  vis.py  visualization.py
experiments/: lab2-MultimodalLarge.ipynb  lab2-SimpleSquare copy.ipynb  lab2-SimpleSquare.ipynb  lab2-StepsSmall.ipynb  lab3-MultimodalLarge.ipynb  lab5-Search.py  (+15 more)
mygrad/: pyproject.toml
mygrad/mygrad/: activations.py  dataloaders.py  functional.py  losses.py  parameters.py  trainer.py  trainers.py  utils.py
mygrad/mygrad/components/: __init__.py  activations.py  base.py  dense.py  dropout.py  linear.py  sequential.py  softmax.py
mygrad/mygrad/layers/: __init__.py  base.py  linear.py
mygrad/mygrad/models/: __init__.py  base.py  dense.py  sequential.py
mygrad/mygrad/optimizers/: __init__.py  adam.py  base.py  rmsprop.py  sgd.py
mygrad/mygrad/preprocessors/: __init__.py  base.py  scalers.py
mygrad/mygrad/trainers/: __init__.py  base.py  classification.py  plugins.py
mygrad/tests/: test_functional.py  test_losses.py  test_utils.py
mygrad/tests/components/: test_dense.py  test_linear.py  test_sequential.py  test_softmax.py
mygrad/tests/layers/: test_linear.py
mygrad/tests/models/: test_dense.py  test_sequential.py
mygrad/tests/optimizers/: test_gradient_descent.py
mygrad/tests/preprocessors/: test_scalers.py
(+25 files in other folders)
