[tool.poetry]
name = "mygrad"
version = "0.1.0"
description = "Simple implementation of nueral networks"
authors = ["ZetrextJG <jakubzgrzywaczewski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
